--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -26,6 +26,6 @@ body {
 
 @media only screen and (max-width: 320px) {
   html {
-    width: 116vw;
+    width: 123vw;
   }
 }
